# 7xAI-challenge-day1-voice-agent

./: README.md  core.py  docker-compose.yaml  main.py  pyproject.toml  template.env
public/templates/: index.html
